force-app/main/default/objects/AutomatedTestSetup__mdt/AutomatedTestSetup__mdt.object-meta.xml
<CustomObject>
    <label>Automated Test Setup</label>
    <pluralLabel>Automated Test Setups</pluralLabel>
</CustomObject>