force-app/main/default/objects/AutomatedTestSetup__mdt/fields/Cron__c.field-meta.xml
<CustomField>
    <fullName>Cron__c</fullName>
    <description>This is the schedule the tests will run on.</description>
    <inlineHelpText>See the Apex Scheduler documentation for how to write cron expressions</inlineHelpText>
    <label>Cron</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>