force-app/main/default/objects/AutomatedTestSetup__mdt/fields/ExcludedClasses__c.field-meta.xml
<CustomField>
    <fullName>ExcludedClasses__c</fullName>
    <description>These Apex test classes will NOT be run, regardless of a defined Test Name Pattern.</description>
    <inlineHelpText>Takes a comma-separated list of Apex classes</inlineHelpText>
    <label>Excluded Classes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>