force-app/main/default/objects/AutomatedTestSetup__mdt/fields/ExcludedUserIds__c.field-meta.xml
<CustomField>
    <fullName>ExcludedUserIds__c</fullName>
    <description>Users defined here will NOT be emailed, regardless of whether they meet other configured criteria.</description>
    <inlineHelpText>Takes a comma-separated list of User IDs</inlineHelpText>
    <label>Excluded User Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>