force-app/main/default/objects/AutomatedTestSetup__mdt/fields/IncludeNamespacedClasses__c.field-meta.xml
<CustomField>
    <fullName>IncludeNamespacedClasses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, namespaced, i.e. packaged, classes, will be in included in the test run.</description>
    <label>Include Namespaced Classes</label>
    <type>Checkbox</type>
</CustomField>