force-app/main/default/objects/AutomatedTestSetup__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this test configuration will be scheduled when the Automated Test Runner is launched. Unchecking already active scheduled test runs will not unschedule them. The associated scheduled job must be deleted.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>