force-app/main/default/objects/AutomatedTestSetup__mdt/fields/MinutesToWait__c.field-meta.xml
<CustomField>
    <fullName>MinutesToWait__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The Automated Test Runner will check in intervals of [this] many minutes to see if the test run is complete.</description>
    <label>Minutes To Wait</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>