force-app/main/default/objects/AutomatedTestSetup__mdt/fields/PermissionSetToEmail__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetToEmail__c</fullName>
    <description>Users of this permission set will be emailed the test results. These will be combined with users in any configured profile or list of user IDs.</description>
    <inlineHelpText>Takes a permission set&apos;s API name</inlineHelpText>
    <label>Permission Set To Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>