force-app/main/default/objects/AutomatedTestSetup__mdt/fields/ProfileToEmail__c.field-meta.xml
<CustomField>
    <fullName>ProfileToEmail__c</fullName>
    <description>Users of this profile will be emailed the test results. These will be combined with users in any configured permission set or list of user IDs.</description>
    <inlineHelpText>Takes a profile name</inlineHelpText>
    <label>Profile To Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>