force-app/main/default/objects/AutomatedTestSetup__mdt/fields/ShowStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ShowStackTrace__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the stack traces for failed tests will be included in the emailed report.</description>
    <label>Show Stack Trace</label>
    <type>Checkbox</type>
</CustomField>