force-app/main/default/objects/AutomatedTestSetup__mdt/fields/TestNamePattern__c.field-meta.xml
<CustomField>
    <fullName>TestNamePattern__c</fullName>
    <description>Filter the test classes to run to only include those that match this SOQL pattern, ex: %bacon%. Do not include any quotes.</description>
    <inlineHelpText>See the SOQL Refernce for how to use the LIKE operator</inlineHelpText>
    <label>Test Name Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>