force-app/main/default/objects/AutomatedTestSetup__mdt/fields/UserIds__c.field-meta.xml
<CustomField>
    <fullName>UserIds__c</fullName>
    <description>Users defined here will be emailed the test results. These will be combined with users in any configured profile or permission set.</description>
    <inlineHelpText>Takes a comma-separated list of User IDs</inlineHelpText>
    <label>User Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>