force-app/main/default/objects/AutomatedTestSetup__mdt/validationRules/Missing_Recipients.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Recipients</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISBLANK(ProfileToEmail__c),
	ISBLANK(PermissionSetToEmail__c),
	ISBLANK(UserIds__c)
)</errorConditionFormula>
    <errorMessage>You must specify either a profile or permission set and/or a group of user IDs to be emailed the test results.</errorMessage>
</ValidationRule>